[package]
name = "nym"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core", "serde", "digest"] }
digest = "0.10"
futures = { version = "0.3", features = ["executor"] }
merlin = "3"
rand = "0.8"
serde = "1"
thiserror = "1"
trait-variant = "0.1"

[dev-dependencies]
serde_json = "1"
